syntax = "proto3";

package proto;

option go_package = "proto/userpb";

import "google/protobuf/timestamp.proto";

service UserService {
    rpc GetAllUser (GetAllUserRequest) returns (GetAllUserResponse);
    rpc CreateUser (CreateUserRequest) returns (CreateUserReponse);
    rpc UpdateUser (UpdateUserRequest) returns (UpdateUserReponse);
    rpc DeleteUser (DeleteUserRequest) returns (DeleteUserReponse);
}

message User {
    int32 id  = 1;
    string name = 2;
    string email = 3;
    string password = 4;
    int32 role_id = 5;
    string last_access = 6;
}

message GetAllUserRequest {
}

message GetAllUserResponse {
    bool status = 1;
    string message = 2;
    repeated User users = 3;
}

message CreateUserRequest {
    User user = 1;
}

message CreateUserReponse {
    bool status = 1;
    string message = 2;  
}

message UpdateUserRequest {
    string name = 1;
}

message UpdateUserReponse {
    bool status = 1;
    string message = 2;  
}

message DeleteUserRequest {
    int32 user_id = 1; 
}

message DeleteUserReponse {
    bool status = 1;
    string message = 2;  
}